# insurance_project

./: .gitignore  Insurance_Pricing_Forecast .ipynb  README.md  engine.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Insurance_Pricing_Forecast -checkpoint.ipynb
lib/: Insurance_Pricing_Forecast .ipynb
ml_pipeline/: model_performance.py
